<resources>
    <string name="app_name">QuizApp</string>

    <string name="title_question">Question</string>
    <string name="title_result">Result</string>
    <string name="title_settings">Settings</string>

    <string name="action_play_quiz">Play Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_done">Done</string>
    <string name="action_review">Review</string>
    <string name="action_play_again">Play Again</string>
    <string name="action_end_quiz">End Quiz</string>

    <string name="message_play_quiz_clicked">Play quiz clicked!</string>
    <string name="message_answer_all_questions">Please answer all questions to complete the quiz.</string>
    <string name="message_score">Your Score: %d / %d</string>
    <string name="message_result_info_excellent">Excellent!</string>
    <string name="message_result_info_good">Good.</string>
    <string name="message_result_info_ok">That was OK.</string>
    <string name="message_result_info_never_mind">Well, never mind. You can try again.</string>

    <string name="pref_question_count">Number of Questions</string>
    <string name="question_count_10">10</string>
    <string name="question_count_20">20</string>

    <string name="pref_difficulty_level">Level</string>
    <string name="difficulty_level_label_easy">Easy</string>
    <string name="difficulty_level_label_medium">Medium</string>
    <string name="difficulty_level_label_hard">Hard</string>
    <string name="difficulty_level_value_easy" translatable="false">easy</string>
    <string name="difficulty_level_value_medium" translatable="false">medium</string>
    <string name="difficulty_level_value_hard" translatable="false">hard</string>

    <string name="pref_quiz_category">Category</string>
    <string name="quiz_category_general_knowledge">General Knowledge</string>
    <string name="quiz_category_entertainment_books">Entertainment: Books</string>
    <string name="quiz_category_entertainment_film">Entertainment: Film</string>
    <string name="quiz_category_entertainment_music">Entertainment: Music</string>
    <string name="quiz_category_science_computers">Science: Computers</string>
    <string name="quiz_category_science_mathematics">Science: Mathematics</string>
    <string name="quiz_category_geography">Geography</string>
    <string name="quiz_category_history">History</string>
    <string name="quiz_category_art">Art</string>
    <string name="quiz_category_animals">Animals</string>
    <string name="quiz_category_vehicles">Vehicles</string>

    <string name="default_quiz_category" translatable="false">9</string>

    <string name="widget_no_quiz_played">No quiz played!</string>

    <string name="analytics_category_quiz_count" translatable="false">Quiz Count</string>

</resources>
