<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <include layout="@layout/app_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:textSize="24sp"
        tools:text="Your Score: 10 / 10"/>

    <TextView
        android:id="@+id/tv_result_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_score"
        android:textSize="18sp"
        tools:text="Well done!"/>

    <Button
        android:id="@+id/button_review"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result_info"
        android:text="@string/action_review"/>

    <Button
        android:id="@+id/button_play_again"
        android:layout_width="180dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@id/button_review"
        app:layout_constraintEnd_toEndOf="@id/button_review"
        app:layout_constraintTop_toBottomOf="@id/button_review"
        android:text="@string/action_play_again"/>

    <Button
        android:id="@+id/button_end_quiz"
        android:layout_width="180dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@id/button_play_again"
        app:layout_constraintEnd_toEndOf="@id/button_play_again"
        app:layout_constraintTop_toBottomOf="@id/button_play_again"
        android:text="@string/action_end_quiz"/>

</androidx.constraintlayout.widget.ConstraintLayout>